err/django-services.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_services'...
Listing './lib/python3.5/site-packages/django_services/admin'...
Listing './lib/python3.5/site-packages/django_services/api'...
Compiling './lib/python3.5/site-packages/django_services/api/api.py'...
***   File "./lib/python3.5/site-packages/django_services/api/api.py", line 34
    except InvalidOperationException, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/django_services/api/urls.py'...
***   File "./lib/python3.5/site-packages/django_services/api/urls.py", line 18
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/django_services/runtests'...
Listing './lib/python3.5/site-packages/django_services/service'...
Listing './lib/python3.5/site-packages/django_services/static'...
Listing './lib/python3.5/site-packages/django_services/static/css'...
Listing './lib/python3.5/site-packages/django_services/templates'...
Listing './lib/python3.5/site-packages/django_services/templates/rest_framework'...
Listing './lib/python3.5/site-packages/django_services/tests'...
Listing './lib/python3.5/site-packages/django_services-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
